Fix: Nav items gap

--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -2,7 +2,7 @@
 
 .navList {
   display: flex;
-  gap: 10px;
+  gap: 30px;
 
   li {
     color: color.$Orange;
